# simple_algebra_library

./: .gitignore  CMakeLists.txt  Makefile  README.md  rebuild.sh
headers/: algebra_io.h  algorithms.h  field.h  monomial.h  order_impl.h  orders.h  polynomial.h  polynomial_set.h  speed_tests.h  stopwatch.h  tests.h
src/: main.cpp  monomial.cpp  orders.cpp  speed_tests.cpp  tests.cpp
test_launcher/: half_tests.txt  main.py  one_test.txt  tests.txt
